--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "jsonwebtoken": "^8.3.0",
-    "lambda-req": "^1.2.3"
+    "lambda-req": "^1.2.3",
+    "request": "^2.87.0"
   }
 }
